# wd-nas-monitor

./: .gitignore  README.md  mypy.ini  pyproject.toml  setup.cfg
resources/: WD EX2 Ultra.postman_collection.json
tests/: .gitignore  __init__.py  config.yaml.example  conftest.py
tests/fixtures/json/: login.json  smart_info.json  system_logs.json
tests/fixtures/xml/: device_info.xml  firmware.xml  home.xml  home_info.xml  smart_info.xml  status.xml  system_info.xml
tests/integration/: __init__.py  conftest.py  test_auth.py  test_disk_info.py  test_storage.py  test_system_info.py
tests/unit/: test_client.py  test_ex2.py  test_models.py
wdnas/: __init__.py  client.py  exceptions.py
wdnas/devices/: __init__.py  base.py  ex2.py
wdnas/models/: __init__.py  disk.py  system.py
