[metadata]
name = wd-nas-monitor
version = 0.1.0
author = Jibril Sharafi
author_email = jibril.sharafi@example.com
description = A library for monitoring Western Digital NAS devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jibrilsharafi/wd-nas-monitor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: System :: Monitoring

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.12
install_requires =
    requests>=2.25.0
    pydantic>=1.8.0

[options.packages.find]
exclude =
    tests
    examples
